--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,17 @@ dependencies:
   styled_widget: ^0.3.1
   rnd: ^0.1.0
   intl: ^0.17.0
-  http: 
+  getwidget: ^2.0.2
+  http: ^0.13.3
+  group_button: ^2.2.2
   firebase_core: "^1.2.0"
   firebase_auth: "^1.2.0"
+  cloud_functions: "^1.1.1"
   
   time: "^2.0.0"
   cupertino_icons: ^1.0.2
   dotted_border: ^1.0.5
+  get: ^4.1.4
   flutter_form_builder:
   bloc:
   flutter_bloc:
